--- a/src/scss/support/_base.scss
+++ b/src/scss/support/_base.scss
@@ -37,13 +37,13 @@ h1, h2, h3, h4, h5, h6{
   font-weight: 100;
 }
 // 1.2, 2.4, 3.6, 4.8
-h1, h2, h3{
+h1, h2 {
   line-height: 3.6rem; // + 1.2
   padding: 3rem 0 0.6rem; // + 2.4 + 1.2
 }
 
-h4, h5, h6{
-  padding: 2.4rem 0;
+h3, h4, h5, h6{
+  padding: 2.4rem 0 1.2rem;
 }
 
 h1{
@@ -59,7 +59,8 @@ h2{
 }
 
 h3{
-  font-size: 2.8rem;
+  // font-size: 2.8rem;
+  font-size: 2rem;
 }
 
 h4{
